[update] index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
         <h1>Kangyao Huang</h1>
         <h3>PhD Candidate | AI Researcher | Aircraft Engineer</h3>
         <hr>
-        <p>I am pursuing a PhD degree in the Department of Computer Science and Technology at the Tsinghua University under the supervision of Prof. Huaping Liu.
-            Before that, I got an MRes in Control & Systems Engineering from ACSE, the University of Sheffield(UoS), UK., and a BEng in Aircraft Design from Northwestern Polytechnical
-            University(NWPU), China. Besides, I have several years start-up experience in aerospace and automation industrial sectors.
-            <br>My main research interest is in robot learning for virtual and real world practice.<br></p>
+        <p>I am pursuing a PhD degree in Computer Science at the Tsinghua University under the supervision of Prof. Huaping Liu.
+            Besides, I hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., and a BEng degree in Aerospace from Northwestern Polytechnical
+            University(NWPU), China. Before my PhD work, I have several years start-up experience in aerospace and automation industrial sectors, serve as a UAV designer 
+            and technical director.
+            <br>
+            <br>My current research interest is in robot learning for virtual and real world practice. I also follow ideas on aerial robotics, 
+            swarm robotics, and evolutionary computation. My technological vision is to empower tranditional manufacturing with artificial intelligence technology.<br></p>
     </section>
     <aside class="socialNetworkNavBar">
         <div class="socialNetworkNav"> 
@@ -52,7 +55,7 @@
 <!-- content -->
 <section class="mainContent"> 
     <section class="section2">
-        <h2 class="sectionTitle">Publications</h2>
+        <h2 class="sectionTitle">Selected Publications</h2>
         <hr class="sectionTitleRule">
         <hr class="sectionTitleRule2">
 
@@ -468,7 +471,7 @@
                 
             </div>
             <section class="section2Content">
-                <h2 class="sectionContentTitle"> Development of Flying Car for Ground-aerial Transportation</h2>
+                <h2 class="sectionContentTitle"> the Implementation of Flying Car for Ground-aerial Transportation</h2>
                 <h3 class="sectionContentSubTitle"> 
                     <b>Departments:</b>
                     <a style="font-style: italic;font-size: 12px;" href="http://www.svm.tsinghua.edu.cn/">@School of Vehicle and Mobility, THU</a>
@@ -660,6 +663,41 @@
                     industry, showcasing the feasibility and potential of variable-pitch control in enhancing the performance and 
                     versatility of oil-powered UAVs. </p>
             </section>
+        </div>
+
+    </section>
+    <br>
+
+    <!-- Education -->
+    <section class="section2">
+        <h2 class="sectionTitle">Education</h2>
+        <hr class="section2">
+
+        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 5px;">
+            <group>
+                <img src="profile/清华logo.png" width="3%" height="3%">&emsp;
+                <p style="font-weight: bold;font-style: italic;">2022~now,&emsp;</p>
+                <h3 class="sectionContentSubTitle">
+                    pursuing a <a style="font-weight: bold;">PhD</a> degree of Computer Science and Technology, <a style="font-weight: bold;">Tsinghua University</a>, China
+                </h3>&emsp;
+                <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Morphology in Robot Learning</p>
+            </group>
+            <group>
+                <img src="profile/UoS.jpg" width="3%" height="3%">&emsp;
+                <p style="font-weight: bold;font-style: italic;">2019~2020,&emsp;</p>
+                <h3 class="sectionContentSubTitle">
+                    <a style="font-weight: bold;">MRes</a> in Control & Systems Engneering, <a style="font-weight: bold;color: dodgerblue;" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="font-weight: bold;">the University of Sheffied</a>, UK
+                </h3>&emsp;
+                <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Cooperative Transport by Swarm Robots</p>
+            </group>
+            <group>
+                <img src="profile/西工大校标大图 蓝白版.jpg" width="3%" height="3%">&emsp;
+                <p style="font-weight: bold;font-style: italic;">2012~2016,&emsp;</p>
+                <h3 class="sectionContentSubTitle">
+                    <a style="font-weight: bold;">BEng</a> in Aircraft Design, <a style="font-weight: bold;color: rgb(2, 127, 253);" href="https://hangtian.nwpu.edu.cn/">School of Astronautics</a>, <a style="font-weight: bold;">Northwestern Polytechnical University</a>, China
+                </h3>&emsp;
+                <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Oil-powered Quadrotor</p>
+            </group>
         </div>
 
     </section>
