[update] index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3>PhD Candidate | AI Researcher | Aircraft Engineer</h3>
         <hr>
         <p>I am pursuing a PhD degree in Computer Science at the Tsinghua University under the supervision of Prof. Huaping Liu.
-            Besides, I hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., and a BEng degree in Aerospace from Northwestern Polytechnical
+            Besides, I hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., supervised by Prof. John Oyekan, and a BEng degree in Aerospace from Northwestern Polytechnical
             University(NWPU), China. Before my PhD work, I have several years start-up experience in aerospace and automation industrial sectors, serve as a UAV designer 
             and technical director.
             <br>
@@ -250,6 +250,63 @@
             </aside>
         </div>
 
+        <!-- 2023中国科学  -->
+        <div onmouseout="idr_stop()" onmouseover="idr_start()">	  
+            <div class="sectionContent" style="padding:0px;vertical-align:middle">
+                <div class="one">
+                    <div class="two" id="idr_image">
+                        <video  width="100%" height="100%" muted="" autoplay="" loop="">
+                            <source src="material/2023scichina.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <img src="material/2023scichina.mp4" width="100%">
+                </div>
+                <script type="text/javascript">
+                    function idr_start() {
+                    document.getElementById('idr_image').style.opacity = "1";
+                    }
+
+                    function idr_stop() {
+                    document.getElementById('idr_image').style.opacity = "0";
+                    }
+                    idr_stop()
+                </script>
+            </div>
+            <section class="section2Content">
+                <h2 class="sectionContentTitle">智能飞行汽车关键技术及发展趋势 - State-of-the-art and Technical Trends of Intelligent Flying Cars</h2>
+                <h3 class="sectionContentSubTitle"> 
+                    <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
+                    <a style="color: #999;">Songsong Rong</a>, 
+                    <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
+                    <a href="https://www.cae.cn/cae/html/main/colys/00679747.html" target="_blank">Deyi Li</a>,
+                    <a href="https://scholar.google.com.hk/citations?user=HXnkIkwAAAAJ" target="_blank">Huaping Liu</a>, 
+                    <a href="https://scholar.google.com.hk/citations?user=gVuaz7QAAAAJ" target="_blank">Yuanhao Huang</a>, 
+                    <b>Kangyao Huang</b>, 
+                    <!-- <a href="https://scholar.google.com.hk/citations?user=pKCG3T8AAAAJ" target="_blank">Jianxi Luo</a>, -->
+                </h3>
+                <h3 class="sectionContentSubTitle">
+                    <em> 中国科学:技术科学, SCIENCE CHINA Technological Sciences, 2023, </em>
+                    <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Review</a>
+                </h3>
+            </section>
+            <aside class="externalResourcesNav" style="margin-top:0%"> 
+                <div class="dropdown"> <span>Abstract</span>
+                    <div class="dropdown-content">
+                        <p style="text-align:left;">
+                            城市立体交通是未来智慧出行发展的热点方向, 近年来受到了广泛的关注. 作为城市立体交通的载体, 智能飞行汽车融合了飞机与汽车两种运动模态, 
+                            能够灵活地在空中与地面进行切换. 本文介绍了智能飞行汽车 的背景、历史与现状、阐述了其与城市空中交通载具的区别，分析与讨论了飞行汽车的系统设计，
+                            并介绍了智 能飞行汽车的关键技术创新，包括动力技术和机电总体设计、多模态切换、模块复用与飞车脑认知等。重点讨 论了飞行汽车的智能化技术，
+                            包括近地感知、决策与规划、智能控制与智能通信系统的关键技术与瓶颈. 最后, 结 合现有技术, 对智能飞行汽车的技术进行了剖析, 
+                            并讨论了潜在的解决方案与发展趋势.
+                        </p>
+                    </div>
+                </div>
+                <div class="dropdown"><span></span><a href="publications/2023_中国科学技术科学_智能飞行汽车关键技术及发展趋势.pdf" target="_blank">Paper</a></div>
+            </aside>
+        </div>
+
+
         <!-- 2022tiv  -->
         <div onmouseout="idr_stop()" onmouseover="idr_start()">	  
             <div class="sectionContent" style="padding:0px;vertical-align:middle">
@@ -395,7 +452,7 @@
                     <a href="https://scholar.google.com.hk/citations?user=W7ePGWYAAAAJ" target="_blank">John Oyekan</a>, 
                 </h3>
                 <h3 class="sectionContentSubTitle">
-                    <em>Elesvier, Swarm and Evolutionary Computation, 2021 </em>
+                    <em>Swarm and Evolutionary Computation, 2021 </em>
                     <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 10</a>
                 </h3>
             </section>
@@ -426,7 +483,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="https://www.sciencedirect.com/science/article/abs/pii/S221065022100119X" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="publications/2021_SWEVO_Decentralised aerial swarm for adaptive and energy efficient transport of unknown loads.pdf" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="https://github.com/KJaebye/Drone-Swarm-Cooperative-Transport" target="_blank">Code</a></div>
             </aside>
         </div>
@@ -678,7 +735,7 @@
                 <img src="profile/清华logo.png" width="3%" height="3%">&emsp;
                 <p style="font-weight: bold;font-style: italic;">2022~now,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
-                    pursuing a <a style="font-weight: bold;">PhD</a> degree of Computer Science and Technology, <a style="font-weight: bold;">Tsinghua University</a>, China
+                    pursuing a <a style="font-weight: bold;">PhD</a> degree in Computer Science and Technology, <a style="font-weight: bold;">Tsinghua University</a>, China
                 </h3>&emsp;
                 <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Morphology in Robot Learning</p>
             </group>
@@ -686,7 +743,7 @@
                 <img src="profile/UoS.jpg" width="3%" height="3%">&emsp;
                 <p style="font-weight: bold;font-style: italic;">2019~2020,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">MRes</a> in Control & Systems Engneering, <a style="font-weight: bold;color: dodgerblue;" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="font-weight: bold;">the University of Sheffied</a>, UK
+                    <a style="font-weight: bold;">MRes</a> in Control & Systems Engneering, <a style="font-weight: bold;color: rgb(4, 113, 222);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="font-weight: bold;">the University of Sheffied</a>, UK
                 </h3>&emsp;
                 <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Cooperative Transport by Swarm Robots</p>
             </group>
@@ -694,7 +751,7 @@
                 <img src="profile/西工大校标大图 蓝白版.jpg" width="3%" height="3%">&emsp;
                 <p style="font-weight: bold;font-style: italic;">2012~2016,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">BEng</a> in Aircraft Design, <a style="font-weight: bold;color: rgb(2, 127, 253);" href="https://hangtian.nwpu.edu.cn/">School of Astronautics</a>, <a style="font-weight: bold;">Northwestern Polytechnical University</a>, China
+                    <a style="font-weight: bold;">BEng</a> in Aircraft Design, <a style="font-weight: bold;color: rgb(1, 98, 195);" href="https://hangtian.nwpu.edu.cn/">School of Astronautics</a>, <a style="font-weight: bold;">Northwestern Polytechnical University</a>, China
                 </h3>&emsp;
                 <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Oil-powered Quadrotor</p>
             </group>
