[update] index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             and technical director.
             <br>
             <br>My current research interest is in robot learning for virtual and real world practice. I also follow ideas on aerial robotics, 
-            swarm robotics, and evolutionary computation. My technological vision is to empower tranditional manufacturing with artificial intelligence technology.<br></p>
+            swarm robotics, and evolutionary computation. My technological vision is to empower tranditional manufacturing with artificial intelligence technology.
+            I would like to work with any excellent partners, if you have any ideas, please do not hesitate to email me directly.<br></p>
     </section>
     <aside class="socialNetworkNavBar">
         <div class="socialNetworkNav"> 
@@ -710,8 +711,9 @@
             <section class="section2Content">
                 <h2 class="sectionContentTitle"> Oil-powered Variable-pitch Quadrotor</h2>
                 <p style="font-size: 10px;"><b>This is my BEng dissertation.</b> Notably, this is the first successful flight of 
-                    oil-powered rotary-wing UAV utilizing variable-pitch control in China. We finished it at the end of 2015.</p>
-                <p style="font-size: 10px;"><b>Brief:</b> I spearheaded a groundbreaking project focused on the development of a 
+                    oil-powered rotary-wing UAV utilizing variable-pitch control in China. We finished it at the end of 2015. Work 
+                    with teammates Fanjie Kong, Jingdong Ma.</p>
+                <p style="font-size: 10px;"><b>Brief:</b> I participated a groundbreaking project focused on the development of a 
                     oil-powered variable-pitch multirotor unmanned aerial vehicle (UAV). This project involved the comprehensive 
                     design and prototyping testing of the UAV. Our efforts encompassed the integration of advanced variable-pitch 
                     technology with traditional oil-powered UAV systems, leading to a novel and efficient aerial platform. We use 
