[update] index.html

--- a/index.html
+++ b/index.html
@@ -761,13 +761,37 @@
 
     </section>
 
+    <br>
+    <!-- Experiences -->
+    <section class="section2">
+        <h2 class="sectionTitle">Experiences</h2>
+        <hr class="section2">
+
+        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 5px;">
+            <group>
+                <p style="font-weight: bold;font-style: italic;">2015~2018,&emsp;</p>
+                <h3 class="sectionContentSubTitle">
+                    <a style="font-weight: bold;">Co-Founder</a> @<a style="font-weight: bold;color: rgb(112, 112, 112);">Bingo Intelligence Co. Ltd.</a>, Xi'an, ShaanXi, China
+                </h3>
+            </group>
+            <group>
+                <p style="font-weight: bold;font-style: italic;">2021~2022,&emsp;</p>
+                <h3 class="sectionContentSubTitle">
+                    <a style="font-weight: bold;">Research assistant</a> @New Technology Concept Vehicles,<a style="font-weight: bold;color: rgb(113, 112, 114);"> THU</a>, Beijing, China
+                </h3>
+            </group>
+        </div>
+
+    </section>
+    <br><br>
+
 	  
   <hr>
   
 </section>
 
 <footer>
-  <p class="footerDisclaimer"><span></span></p>
+  <p class="footerDisclaimer">Updated by KJaebye<span></span></p>
   <p class="footerNote"></p>
 </footer>
 
