[update] index.html

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             <section class="section2Content">
                 <h2 class="sectionContentTitle"> the Implementation of Flying Car for Ground-aerial Transportation</h2>
                 <h3 class="sectionContentSubTitle"> 
-                    <b>Departments:</b>
+                    <b>Partners:</b>
                     <a style="font-style: italic;font-size: 12px;" href="http://www.svm.tsinghua.edu.cn/">@School of Vehicle and Mobility, THU</a>
                     <a style="font-style: italic;font-size: 12px;" href="https://www.cs.tsinghua.edu.cn/">@Department of Computer Science and Technology, THU</a>
                     <a style="font-style: italic;font-size: 12px;" href="https://www.tsari.tsinghua.edu.cn/">@Suzhou Automobile Research Institute-CN</a>
@@ -542,12 +542,12 @@
                     <a style="font-style: italic;font-size: 12px;" href="https://www.robosense.cn/index">@RoboSense Co., Ltd.</a>
                 </h3>
                 <h3 class="sectionContentSubTitle"> 
-                    Director:
-                    <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,
+                    Project Leader:
+                    <b>Kangyao Huang</b>
                     Project Manager:
                     <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
-                    Technical Project Leader:
-                    <b>Kangyao Huang</b>
+                    Director:
+                    <a href="https://www.tsinghua.edu.cn/info/1166/93890.htm" target="_blank">Jun Li</a>,                    
                 </h3>
                 <h3 class="sectionContentSubTitle">
                     <a style="font-size: 12px;">Other participants: </a>
@@ -632,7 +632,7 @@
             <section class="section2Content">
                 <h2 class="sectionContentTitle"> Solar-powered UAV for Long Duration Cruising</h2>
                 <h3 class="sectionContentSubTitle"> 
-                    <b>Co-op:</b>
+                    <b>Work with</b>
                     <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@Bingo Intelligence Co., Ltd.</a>
                 </h3>
                 <p style="font-size: 10px;"><b>Brief:</b> This research focused on enhancing the endurance of solar-powered unmanned 
@@ -643,6 +643,11 @@
                     durations, enabling them to operate efficiently across diverse environmental conditions. This research contributes 
                     to the advancement of renewable energy-powered UAV technology, offering potential applications in various fields 
                     such as environmental monitoring, aerial photography, and telecommunications.</p>
+                <p style="font-size: 10px;color: rgba(1, 145, 193, 0.579);">
+                    > We honor the memory of Zhaoxi Wang, one of the founding members of our team, whose dedication and vision continue 
+                    to inspire us as we move forward, and his spirit will forever remain an integral part of our journey,
+                     just like this aircraft did.
+                </p>
             </section>
         </div>
 
@@ -672,7 +677,7 @@
             <section class="section2Content">
                 <h2 class="sectionContentTitle"> Auto-Patralling UAV Platform</h2>
                 <h3 class="sectionContentSubTitle"> 
-                    <b>Co-op:</b> 
+                    <b>Work with</b> 
                     <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@Bingo Intelligence Co., Ltd.</a>
                 </h3>
                 <p style="font-size: 10px;"><b>Brief:</b> This project focused on the development of an autonomous inspection drone 
