--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                             Your browser does not support the video tag.
                         </video>
                     </div>
-                    <img src="material/2022TIV.png" width="100%">
+                    <img src="material/2022tiv1.mp4" width="100%">
                 </div>
                 <script type="text/javascript">
                     function idr_start() {
