--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </style>
 
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
+<!-- <script>var __adobewebfontsappname__="dreamweaver"</script><script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script> -->
 </head>
 
 <body alink = "#282727" vlink = "#9b9b9b" link = "#9b9b9b">
@@ -743,24 +743,24 @@
                 <p style="font-weight: bold;font-style: italic;">2022~now,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
                     pursuing a <a style="font-weight: bold;">PhD</a> degree in Computer Science and Technology, <a style="font-weight: bold;">Tsinghua University</a>, China
-                </h3>&emsp;
-                <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Morphology in Robot Learning</p>
+                </h3>
+                <p style="font-weight: bold;font-style: italic;">&emsp;Dissertation:&emsp;</p><p style="font-style: italic;">Morphology in Robot Learning</p>
             </group>
             <group>
                 <img src="profile/UoS.jpg" width="3%" height="3%">&emsp;
                 <p style="font-weight: bold;font-style: italic;">2019~2020,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
                     <a style="font-weight: bold;">MRes</a> in Control & Systems Engneering, <a style="font-weight: bold;color: rgb(4, 113, 222);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="font-weight: bold;">the University of Sheffied</a>, UK
-                </h3>&emsp;
-                <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Cooperative Transport by Swarm Robots</p>
+                </h3>
+                <p style="font-weight: bold;font-style: italic;">&emsp;Dissertation:&emsp;</p><p style="font-style: italic;">Cooperative Transport by Swarm Robots</p>
             </group>
             <group>
                 <img src="profile/西工大校标大图 蓝白版.jpg" width="3%" height="3%">&emsp;
                 <p style="font-weight: bold;font-style: italic;">2012~2016,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
                     <a style="font-weight: bold;">BEng</a> in Aircraft Design, <a style="font-weight: bold;color: rgb(1, 98, 195);" href="https://hangtian.nwpu.edu.cn/">School of Astronautics</a>, <a style="font-weight: bold;">Northwestern Polytechnical University</a>, China
-                </h3>&emsp;
-                <p style="font-weight: bold;font-style: italic;">Dissertation:&emsp;</p><p style="font-style: italic;">Oil-powered Quadrotor</p>
+                </h3>
+                <p style="font-weight: bold;font-style: italic;">&emsp;Dissertation:&emsp;</p><p style="font-style: italic;">Oil-powered Quadrotor</p>
             </group>
         </div>
 
