--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <!-- Identity details -->
     <section class="profileHeader">
         <h1>Kangyao Huang</h1>
-        <h3>PhD Candidate | AI Researcher | Aircraft Engineer</h3>
+        <h3>PhD Candidate | AI Researcher | Aircraft & Robotics Engineer</h3>
         <hr>
-        <p>I am pursuing a PhD degree in Computer Science at the Tsinghua University under the supervision of Prof. Huaping Liu.
+        <p>I am pursuing a PhD degree in Computer Science at Tsinghua University under the supervision of Prof. Huaping Liu.
             Besides, I hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., supervised by Prof. John Oyekan, and a BEng degree in Aerospace from Northwestern Polytechnical
             University(NWPU), China. Before my PhD work, I have several years start-up experience in aerospace and automation industrial sectors, serve as a UAV designer 
             and technical director.
@@ -781,11 +781,11 @@
         <h2 class="sectionTitle">Experiences</h2>
         <hr class="section2">
 
-        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 10px;">
+        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 5px;">
             <group>
                 <p style="font-weight: bold;font-style: italic;">2015~2018,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Co-Founder</a> @<a style="font-weight: bold;color: rgb(112, 112, 112);">Bingo Intelligence Co. Ltd.</a>, Xi'an, ShaanXi, China
+                    <a style="font-weight: bold;">Co-Founder</a> @<a style="font-weight: bold;color: rgb(112, 112, 112);">Bingo Intelligence Co. Ltd.</a>, Xi'an, ShaanXi, China.
                 </h3>
             </group>
             <group>
