--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </div>
     <!-- Identity details -->
     <section class="profileHeader">
-        <h1>Kangyao Huang</h1>
+        <h1 style="line-height: 30px;font-size: 28px;margin-bottom: auto;">Kangyao Huang&emsp;&emsp;<img src="profile/name.png" width="80" style="margin-bottom: -5px;"></h1>
         <h3>PhD Candidate | AI Researcher | Aircraft & Robotics Engineer</h3>
         <hr>
-        <p>I am pursuing a PhD degree in Computer Science at Tsinghua University under the supervision of Prof. Huaping Liu.
+        <p>I am an AI researcher and robot engineer from China. Currently, I am pursuing a PhD degree in Computer Science at Tsinghua University under the supervision of Prof. Huaping Liu.
             Besides, I hold an MRes degree in Control from ACSE, the University of Sheffield(UoS), UK., supervised by Prof. John Oyekan, and a BEng degree in Aerospace from Northwestern Polytechnical
             University(NWPU), China. Before my PhD work, I have several years start-up experience in aerospace and automation industrial sectors, serve as a UAV designer 
             and technical director.
@@ -47,6 +47,10 @@
         <div class="socialNetworkNav">
             <a href="" target="_blank">
                 <img src="profile/linkedin.png"  alt="sample" width="30"></a>
+        </div>
+        <div class="socialNetworkNav">
+            <a href="https://orcid.org/my-orcid?orcid=0000-0002-5708-2620" target="_blank">
+                <img src="profile/orcid.png"  alt="sample" width="30"></a>
         </div>
     </aside>
 </header>
@@ -794,6 +798,18 @@
                     <a style="font-weight: bold;">Research assistant</a> @New Technology Concept Vehicles,<a style="font-weight: bold;color: rgb(113, 112, 114);"> THU</a>, Beijing, China
                 </h3>
             </group>
+        </div>
+
+    </section>
+    <br>
+
+    <!-- Activities -->
+    <section class="section2">
+        <h2 class="sectionTitle">Activities</h2>
+        <hr class="section2">
+
+        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 5px;">
+            <p></p>
         </div>
 
     </section>
