--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img src="profile/linkedin.png"  alt="sample" width="30"></a>
         </div>
         <div class="socialNetworkNav">
-            <a href="https://orcid.org/my-orcid?orcid=0000-0002-5708-2620" target="_blank">
+            <a href="https://orcid.org/0000-0002-5708-2620" target="_blank">
                 <img src="profile/orcid.png"  alt="sample" width="30"></a>
         </div>
     </aside>
