--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                     <a style="font-style: italic;font-size: 12px;" href="https://www.robosense.cn/index">@RoboSense Co., Ltd.</a>
                 </h3>
                 <h3 class="sectionContentSubTitle"> 
-                    Project Leader:
+                    Project Technical Leader:
                     <b>Kangyao Huang</b>
                     Project Manager:
                     <a href="https://scholar.google.com.hk/citations?user=0Q7pN4cAAAAJ" target="_blank">Xinyu Zhang</a>, 
