--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 </script>
             </div>
             <section class="section2Content">
-                <h2 class="sectionContentTitle"> Decentralised aerial swarm for adaptive and energy efficient transport of unknown loads </h2>
+                <h2 class="sectionContentTitle"> Decentralised Aerial Swarm for Adaptive and Energy Efficient Transport of Unknown Loads </h2>
                 <h3 class="sectionContentSubTitle"> 
                     <b>Kangyao Huang</b>, 
                     <a href="https://scholar.google.com.hk/citations?user=j63_EA0AAAAJ" target="_blank">Jingyu Chen</a>, 
