--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
             <group>
                 <p style="font-weight: bold;font-style: italic;">2021~2022,&emsp;</p>
                 <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Research assistant</a> @New Technology Concept Vehicles,<a style="font-weight: bold;color: rgb(113, 112, 114);"> THU</a>, Beijing, China
+                    <a style="font-weight: bold;">Research assistant</a> @Institute for New Technology Concept Vehicles,<a style="font-weight: bold;color: rgb(113, 112, 114);"> THU</a>, Beijing, China
                 </h3>
             </group>
         </div>
